--- a/crawling_/크롤링예제/05_04_selenium.ipynb
+++ b/crawling_/크롤링예제/05_04_selenium.ipynb
@@ -6,16 +6,19 @@
    "source": [
     "# 5.4.1 selenium 설치\n",
     "\n",
-    "!pip install selenium"
+    "!pip install selenium\n",
+    "\n",
+    "웹테스팅 툴"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from selenium import webdriver"
+    "from selenium import webdriver\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -67,6 +70,8 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "\n",
+    "# xpass\n",
+    "\n",
     "\n",
     "driver = webdriver.Chrome()\n",
     "driver.get(\"http://www.naver.com\")\n",
@@ -98,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
