--- a/crawling_/크롤링예제/05_03_BeautifulSoup.ipynb
+++ b/crawling_/크롤링예제/05_03_BeautifulSoup.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[117], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#url \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m cap_url \u001b[38;5;241m=\u001b[39m cap_info[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(cap_url)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#상품명 \u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[120], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#url \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m cap_url \u001b[38;5;241m=\u001b[39m cap_info[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(cap_url)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#상품명 \u001b[39;00m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get'"
      ]
     }
@@ -1249,9 +1249,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'url'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\USER\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3791\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3790\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3791\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3792\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'url'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[119], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# get html\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(base_url \u001b[38;5;241m+\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# BeautifulSoup을 활용하여 데이터 파싱\u001b[39;00m\n\u001b[0;32m      5\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(response\u001b[38;5;241m.\u001b[39mcontent, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\USER\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:3893\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3891\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3893\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   3894\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3895\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\USER\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3798\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3793\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3794\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3795\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3796\u001b[0m     ):\n\u001b[0;32m   3797\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3798\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3799\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3800\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3803\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'url'"
+     ]
+    }
+   ],
    "source": [
     "# get html\n",
     "response = requests.get(base_url + df['url'][0])\n",
@@ -1457,6 +1479,222 @@
    "outputs": [],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://api.odcloud.kr/api/3075686/v1/uddi:76e7ab44-df42-4403-83a4-f0060345c77a?page=1&perPage=10&returnType=JSON&serviceKey=jGtWW7zfVyOETrcgdW%2BBN9u%2F0akDIk8KrrV6LgAW3vJ3OA88jFb%2FG0iPHCtl7v4OViw4qNMSiNR5sGRDpiKejg%3D%3D',\n",
+       " 'https://api.odcloud.kr/api/3075686/v1/uddi:76e7ab44-df42-4403-83a4-f0060345c77a?page=2&perPage=10&returnType=JSON&serviceKey=jGtWW7zfVyOETrcgdW%2BBN9u%2F0akDIk8KrrV6LgAW3vJ3OA88jFb%2FG0iPHCtl7v4OViw4qNMSiNR5sGRDpiKejg%3D%3D']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://api.odcloud.kr/api/3075686/v1/uddi:76e7ab44-df42-4403-83a4-f0060345c77a?page=1&perPage=10&serviceKey=jGtWW7zfVyOETrcgdW%2BBN9u%2F0akDIk8KrrV6LgAW3vJ3OA88jFb%2FG0iPHCtl7v4OViw4qNMSiNR5sGRDpiKejg%3D%3D\n",
+    "\n",
+    "base_url = r\"https://api.odcloud.kr/api/3075686/v1/uddi:76e7ab44-df42-4403-83a4-f0060345c77a?\"\n",
+    "query_string = r\"page=1&perPage=10&serviceKey=jGtWW7zfVyOETrcgdW%2BBN9u%2F0akDIk8KrrV6LgAW3vJ3OA88jFb%2FG0iPHCtl7v4OViw4qNMSiNR5sGRDpiKejg%3D%3D\"\n",
+    "\n",
+    "page = '1'\n",
+    "\n",
+    "perPage = '10'\n",
+    "\n",
+    "returnType = 'JSON'\n",
+    "\n",
+    "serviceKey = r\"serviceKey=jGtWW7zfVyOETrcgdW%2BBN9u%2F0akDIk8KrrV6LgAW3vJ3OA88jFb%2FG0iPHCtl7v4OViw4qNMSiNR5sGRDpiKejg%3D%3D\"\n",
+    "\n",
+    "targets = []\n",
+    "\n",
+    "for i in range(0, 2):\n",
+    "    targets.append(base_url +'page='+ f\"{i+1}\" + \"&\" +'perPage='+ perPage + \"&\" + 'returnType='+ returnType + \"&\" + serviceKey)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "10\n",
+      "10\n",
+      "['청주시', '충주시', '제천시', '보은군', '옥천군', '영동군', '증평군', '진천군', '괴산군', '음성군']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "res = requests.get(targets[0])\n",
+    "print(res.status_code)\n",
+    "\n",
+    "json_res1 = res.json()\n",
+    "print(json_res1[\"currentCount\"])\n",
+    "\n",
+    "json_res2 = json.loads(res.text)\n",
+    "print(json_res2[\"currentCount\"])\n",
+    "\n",
+    "# print(json_res1.get(\"data\")[1])\n",
+    "구분 = []\n",
+    "승용차 = []\n",
+    "승합차 = []\n",
+    "특수차 = []\n",
+    "화물차 = []\n",
+    "승용차 = []\n",
+    "승합차 = []\n",
+    "특수차 = []\n",
+    "화물차 = []\n",
+    "승용차 = []\n",
+    "승합차 = []\n",
+    "특수차 = []\n",
+    "화물차 = []\n",
+    "승용차 = []\n",
+    "승합차 = []\n",
+    "특수차 = []\n",
+    "화물차 = []\n",
+    "\n",
+    "\n",
+    "for i in range(0, 10):\n",
+    "    구분.append(json_res1[\"data\"][i][\"구분\"])\n",
+    "    승용차.append(json_res1[\"data\"][i][\"계(승용차)\"])\n",
+    "    승합차.append(json_res1[\"data\"][i][\"계(승합차)\"])\n",
+    "    특수차.append(json_res1[\"data\"][i][\"계(특수차)\"])\n",
+    "    화물차.append(json_res1[\"data\"][i][\"계(화물차)\"])\n",
+    "    승용차.append(json_res1[\"data\"][i][\"관용(승용차)\"])\n",
+    "    승합차.append(json_res1[\"data\"][i][\"관용(승합차)\"])\n",
+    "    특수차.append(json_res1[\"data\"][i][\"관용(특수차)\"])\n",
+    "    화물차.append(json_res1[\"data\"][i][\"관용(화물차)\"])\n",
+    "    승용차.append(json_res1[\"data\"][i][\"영업용(승용차)\"])\n",
+    "    승합차.append(json_res1[\"data\"][i][\"영업용(승합차)\"])\n",
+    "    특수차.append(json_res1[\"data\"][i][\"영업용(특수차)\"])\n",
+    "    화물차.append(json_res1[\"data\"][i][\"영업용(화물차)\"])\n",
+    "    승용차.append(json_res1[\"data\"][i][\"자가용(승용차)\"])\n",
+    "    승합차.append(json_res1[\"data\"][i][\"자가용(승합차)\"])\n",
+    "    특수차.append(json_res1[\"data\"][i][\"자가용(특수차)\"])\n",
+    "    화물차.append(json_res1[\"data\"][i][\"자가용(화물차)\"])\n",
+    "\n",
+    "print(구분)\n",
+    "df = pd.DataFrame(data = zip(\n",
+    "    구분,\n",
+    "    승용차,\n",
+    "    승합차,\n",
+    "    특수차,\n",
+    "    화물차,\n",
+    "    승용차,\n",
+    "    승합차,\n",
+    "    특수차,\n",
+    "    화물차,\n",
+    "    승용차,\n",
+    "    승합차,\n",
+    "    특수차,\n",
+    "    화물차,\n",
+    "    승용차,\n",
+    "    승합차,\n",
+    "    특수차,\n",
+    "    화물차\n",
+    "), \n",
+    "columns = [\"구분\",   \n",
+    "\"계(승용차)\",\n",
+    "\"계(승합차)\",\n",
+    "\"계(특수차)\",\n",
+    "\"계(화물차)\",\n",
+    "\"관용(승용차)\",\n",
+    "\"관용(승합차)\",\n",
+    "\"관용(특수차)\",\n",
+    "\"관용(화물차)\",\n",
+    "\"영업용(승용차)\",\n",
+    "\"영업용(승합차)\",\n",
+    "\"영업용(특수차)\",\n",
+    "\"영업용(화물차)\",\n",
+    "\"자가용(승용차)\",\n",
+    "\"자가용(승합차)\",\n",
+    "\"자가용(특수차)\",\n",
+    "\"자가용(화물차)\"])\n",
+    "\n",
+    "df.to_excel(r\"C:\\Users\\USER\\Desktop\\workspace01\\skn_1\\crawling_\\크롤링예제\\data\\충북_2023.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Downloading selenium-4.21.0-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\user\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.0.7)\n",
+      "Collecting trio~=0.17 (from selenium)\n",
+      "  Downloading trio-0.25.1-py3-none-any.whl.metadata (8.7 kB)\n",
+      "Collecting trio-websocket~=0.9 (from selenium)\n",
+      "  Downloading trio_websocket-0.11.1-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\user\\anaconda3\\lib\\site-packages (from selenium) (2024.2.2)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from selenium) (4.9.0)\n",
+      "Collecting attrs>=23.2.0 (from trio~=0.17->selenium)\n",
+      "  Using cached attrs-23.2.0-py3-none-any.whl.metadata (9.5 kB)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\user\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in c:\\users\\user\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (3.4)\n",
+      "Collecting outcome (from trio~=0.17->selenium)\n",
+      "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\user\\anaconda3\\lib\\site-packages (from trio~=0.17->selenium) (1.16.0)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
+      "  Downloading wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\user\\anaconda3\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\user\\anaconda3\\lib\\site-packages (from cffi>=1.14->trio~=0.17->selenium) (2.21)\n",
+      "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium)\n",
+      "  Downloading h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+      "Downloading selenium-4.21.0-py3-none-any.whl (9.5 MB)\n",
+      "   ---------------------------------------- 0.0/9.5 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.2/9.5 MB 5.1 MB/s eta 0:00:02\n",
+      "   - -------------------------------------- 0.4/9.5 MB 5.7 MB/s eta 0:00:02\n",
+      "   --- ------------------------------------ 0.8/9.5 MB 7.6 MB/s eta 0:00:02\n",
+      "   ----- ---------------------------------- 1.4/9.5 MB 8.9 MB/s eta 0:00:01\n",
+      "   -------- ------------------------------- 1.9/9.5 MB 9.4 MB/s eta 0:00:01\n",
+      "   ----------- ---------------------------- 2.8/9.5 MB 11.3 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 3.9/9.5 MB 13.2 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 5.3/9.5 MB 15.4 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 6.6/9.5 MB 17.4 MB/s eta 0:00:01\n",
+      "   ---------------------------------- ----- 8.1/9.5 MB 18.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  9.5/9.5 MB 20.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.5/9.5 MB 19.5 MB/s eta 0:00:00\n",
+      "Downloading trio-0.25.1-py3-none-any.whl (467 kB)\n",
+      "   ---------------------------------------- 0.0/467.7 kB ? eta -:--:--\n",
+      "   --------------------------------------- 467.7/467.7 kB 28.6 MB/s eta 0:00:00\n",
+      "Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
+      "Using cached attrs-23.2.0-py3-none-any.whl (60 kB)\n",
+      "Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "   ---------------------------------------- 0.0/58.3 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 58.3/58.3 kB ? eta 0:00:00\n",
+      "Installing collected packages: h11, attrs, wsproto, outcome, trio, trio-websocket, selenium\n",
+      "  Attempting uninstall: attrs\n",
+      "    Found existing installation: attrs 23.1.0\n",
+      "    Uninstalling attrs-23.1.0:\n",
+      "      Successfully uninstalled attrs-23.1.0\n",
+      "Successfully installed attrs-23.2.0 h11-0.14.0 outcome-1.3.0.post0 selenium-4.21.0 trio-0.25.1 trio-websocket-0.11.1 wsproto-1.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install selenium"
    ]
   },
   {
